# CMakeSeries1

./: README.md
Ep002/source/: CMakeLists.txt
Ep008/: CMakeLists.txt
Ep008_basic/: CMakeLists.txt
Ep008_basic/src/: main.cpp  stats.cpp  supermath.cpp
Ep009/: CMakeLists.txt
Ep009/src/math/: math.cmake
Ep009/src/stats/: stats.cmake
Ep010/: CMakeLists.txt
Ep010/src/math/: CMakeLists.txt
Ep022_GoogleTest/: CMakeLists.txt
Ep022_GoogleTest/cmake/: AddGoogleTest.cmake
Ep022_GoogleTest/src/: calculator.h
Ep022_GoogleTest/test/: CMakeLists.txt  test_calc.cpp
Ep022_GoogleTest_basic/: CMakeLists.txt
Ep022_GoogleTest_basic/src/: calculator.cpp
Ep023_Catch2Test/cmake/: AddCatch2.cmake
Ep023_Catch2Test/test/: CMakeLists.txt
Ep023_Catch2Test_basic/: CMakeLists.txt
Ep023_Catch2Test_basic/src/: calculator.cpp  main.cpp
Ep023_Catch2Test_basic/test/: AddCatch2.cmake  test_calc.cpp
source/: main.cpp
